--- a/infra/ansible/playbooks/deploy-gateway.yaml
+++ b/infra/ansible/playbooks/deploy-gateway.yaml
@@ -19,7 +19,12 @@
         name: "backend"
         image: "cr.yandex/crp38865vs41akamblti/backend:latest"
         detach: true
-        ports:
-          - "8080:80"
-        published_ports: 0.0.0.0:8080:80/tcp
+        # ports:
+        #   - "8080:80"
+        #   - "80:80"
+        #   - "443:80"
+        published_ports: 
+          - 0.0.0.0:8080:80/tcp
+          - 0.0.0.0:80:80/tcp
+          - 0.0.0.0:443:80/tcp
         restart_policy: always
