--- a/infra/ansible/playbooks/deploy-gateway.yaml
+++ b/infra/ansible/playbooks/deploy-gateway.yaml
@@ -4,7 +4,7 @@
   tasks:
     - name: Copy sa-registry.secret.json
       ansible.builtin.copy:
-        src: ../../data/sa-registry.secret.json # need to leave /files, so ../ х2
+        src: ../../data/sa-registry.secret.json
         dest: /home/dima-batalov/sa-registry.secret.json
     - name: Login registry
       shell: cat /home/dima-batalov/sa-registry.secret.json | docker login --username json_key --password-stdin cr.yandex
@@ -12,19 +12,14 @@
       community.docker.docker_image:
         name: "cr.yandex/crp38865vs41akamblti/backend:latest"
         source: pull
-    # - name: Stop all containers
-    #   shell: docker ps | awk '{print $1}' | tail -n +1 | xargs -I{} docker container stop {}
+    - name: Stop all containers
+      shell: docker ps | awk '{print $1}' | tail -n +1 | xargs -I{} docker container stop {}
+      ignore_errors: true
     - name: Serve
       community.docker.docker_container:
         name: "backend"
         image: "cr.yandex/crp38865vs41akamblti/backend:latest"
         detach: true
-        # ports:
-        #   - "8080:80"
-        #   - "80:80"
-        #   - "443:80"
         published_ports: 
-          - 0.0.0.0:8080:80/tcp
-          - 0.0.0.0:80:80/tcp
-          - 0.0.0.0:443:80/tcp
+          - 127.0.0.1:8080:80/tcp
         restart_policy: always
