--- a/neuralearn_backend/package.json
+++ b/neuralearn_backend/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "~4.16.1"
-  }
+    "express": "~4.16.1",
+    "express-request-id": "^3.0.0",
+    "morgan": "^1.10.0"
+  },
+  "type": "module"
 }
