--- a/neuralearn_backend/package.json
+++ b/neuralearn_backend/package.json
@@ -6,9 +6,11 @@
     "start": "node ./src/app.js"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "~4.16.1",
     "express-request-id": "^3.0.0",
+    "got": "^13.0.0",
     "morgan": "^1.10.0"
   },
   "type": "module"
