--- a/infra/data/nginx.conf
+++ b/infra/data/nginx.conf
@@ -60,11 +60,32 @@ http {
   include /etc/nginx/sites-enabled/*;
 
   server {
+    listen 1234;
+    listen [::]:1234;
+
+    server_name fileserver.ru;
+
+    root /var/www/static;
+    sendfile on;
+
+    location / {
+      try_files $uri $uri/ =404;
+    }
+  }
+
+  server {
     listen 443 ssl;
+    # listen 80;
     server_name gai.bibatalov.ru www.gai.bibatalov.ru;
 
     ssl_certificate /etc/nginx/cert.secret.pem;
     ssl_certificate_key /etc/nginx/privkey.secret.pem;
+
+    # location /static/ {
+    #   root /etc/nginx/static/;
+    #   sendfile on;
+    #   try_files $uri $uri/ $uri.zip =404;
+    # }
 
     location ~ ^/.well-known/acme-challenge/([a-zA-Z0-9-_]+)$ {
       return 301 https://validation.certificate-manager.api.cloud.yandex.net/fpq16rv3ih9fh81ejrfe/$1;
