--- a/infra/ansible/playbooks/deploy-gateway.yaml
+++ b/infra/ansible/playbooks/deploy-gateway.yaml
@@ -21,8 +21,7 @@
         image: "cr.yandex/crp38865vs41akamblti/backend:latest"
         detach: true
         env:
-          - name: MODEL_URL
-            value: 10.0.10.1
+          MODEL_URL: 10.6.0.10
         published_ports: 
           - 127.0.0.1:8080:80/tcp
         restart_policy: always
